# pico-littlefs

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  example.c  example0.c  example1.c  example2.c  hal.c  hal.h  littlefs.c  pico_hal.c  pico_hal.h  test0.c  test1.c  test2.c
lfs/: CMakeLists.txt  lfs.c  lfs.h  lfs_util.c  lfs_util.h  pico_hal.c  pico_hal.h
lfs/include/: lfs.h
lfs/lfs/: pico_hal.h
stdio_init/: CMakeLists.txt  stdio_init.c  stdio_init.h
